frontend/test/should_fail/exectype_AssignVarToAttribute2.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia ;> f:foo=foo::Bar ;> {x.fool=f}); // attribute does not exist
	}
}